--- a/floatingUI.html
+++ b/floatingUI.html
@@ -25,6 +25,16 @@
             border-radius: 5px;
             cursor: pointer;
         }
+        #undoButton {
+            display: block;
+            margin-top: 10px;
+            background-color: #f00;
+            color: white;
+            border: none;
+            padding: 5px 10px;
+            border-radius: 5px;
+            cursor: pointer;
+        }
     </style>
 </head>
 <body>
