--- a/popup.html
+++ b/popup.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h3>Your Saved Highlight</h3>
-    <div id="highlightedText"></div>
+    <div id="highlights"></div>
     <button id="generateQuestion">Generate Question</button>
     <div id="question"></div>
     <script src="popup.js"></script>
