integrating communication with API

--- a/popup.html
+++ b/popup.html
@@ -80,8 +80,8 @@
     <script src="latestHighlight.js"></script>
 </head>
 <body id="floatingDiv">
-    <div>
-        <h3>Your Saved Highlights</h3>
+    <div id="innerContainer">
+        <h3 id="titleMessage">Pop Quiz!!</h3>
         <div id="scrollBoxContainer" class="scrollBoxContainer">
             <div id="placeholderText"> No prompts added</div>
             <div id="highlightContainer">
