--- a/popup.html
+++ b/popup.html
@@ -1,7 +1,5 @@
 <!DOCTYPE html>
 <html>
-    <style>
-    </style>
 <head>
     <title>Saved Highlights</title>
     <style>
@@ -90,6 +88,6 @@
         <div id="questionContainer" class="generateQuestionContainer">
             <div id="question"></div>
         </div>
-    <script src="popup.js"></script>
+    <script src="popup.mjs"></script>
 </body>
 </html>
