--- a/popup.html
+++ b/popup.html
@@ -51,14 +51,26 @@
             border-radius: 5px;
             cursor: pointer;
         }
-        .questionButton:hover {
-            background-color: rgb(252, 88, 88);
-        }
+        
         .generateQuestionContainer {
             display: flex;
             width: 300px;
             height: 50px;
             justify-content: center;
+        }
+        .answerButton {
+            display: block;
+            justify-content: center;
+            margin-top: 10px;
+            background-color: #f00;
+            color: white;
+            border: none;
+            padding: 5px 10px;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+        .answerButton:hover {
+            background-color: rgb(252, 88, 88);
         }
         .entry {
             display: flex;
